# CedarX-12.06.2015

./: README.md
demo/encoder0/: Makefile  encoderApp  encoderDemo.c
demo/encoder1/: 1080p_yuv420sp.yuv  720p.yuv  Makefile  README.md  encoderDemo.c  mkWorkEnv.sh
demo/encoder2/: Makefile  VideoTest  VideoTest.c  encoderDemo.c
src/: Makefile.am  README.md  configure  execAutoCmpCedarX.sh
src/base/include/: CdxConfig.h  log.h
src/common/: Makefile.am  Makefile.in_bck  Makefile_bck  memoryAdapter.c
src/ion/: Makefile_default  README.md  ion_alloc.c
src/ion/include/: ion_alloc.h
src/vencoder/: EncAdapter.c  venc_device.c  vencoder.c
